# M1SI-TOUATI

./: CMakeLists.txt  README.md  theTrain.json
shaders/: fg_shader.glsl
src/: CMakeLists.txt  Config.cpp  Config.hpp  globject.cpp  globject.hpp  scene.cpp  scene.hpp  shaders.hpp  visu.cpp  visu.hpp
